syntax = "proto3";
package port;

import "google/protobuf/empty.proto";

option go_package = "github.com/JonPulfer/portsService/pb/message/port";

message SerialisedPort {
  string id = 1;
  string name = 2;
}

message FindPortRequest {
  string id = 1;
}

service PortService {
  rpc StorePort(stream SerialisedPort) returns (google.protobuf.Empty);
  rpc FindPort(FindPortRequest) returns (SerialisedPort);
}
